--- a/CSS/main.css
+++ b/CSS/main.css
@@ -95,22 +95,19 @@ padding10 {
   font-family: ui-serif; }
 
 /* ------ PRODUCTOS ------- */
-.section-productos {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding-left: 50px;
-  padding: 30px; }
-  .section-productos .imgs-productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px; }
-    .section-productos .imgs-productos .hover-img-productos:hover {
-      transform: scale(1.3);
-      transition-property: all;
-      transition-duration: 2s;
-      transition-timing-function: ease; }
+.encabezados-secundarios {
+  font-size: 50px !important; }
+
+.section-productos-1 {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 400px;
+  padding: 20px;
+  grid-gap: 10px; }
+  .section-productos-1 .gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 /* ------ Biografía ------- */
 .parrafo-bio {
@@ -121,8 +118,7 @@ padding10 {
 
 .imgs-bio {
   display: flex;
-  flex-flow: column;
-  gap: 20px; }
+  flex-flow: row; }
 
 .section-2-bio {
   background-color: #fdb87e; }
@@ -131,10 +127,16 @@ padding10 {
   background-color: #fdb87e; }
 
 .img-bio-1 {
-  padding: 15px; }
+  width: 60vw;
+  height: 80vh;
+  padding: 15px;
+  object-fit: contain; }
 
 .img-bio-2 {
-  padding: 15px; }
+  padding: 15px;
+  object-fit: contain;
+  width: 60vw;
+  height: 80vh; }
 
 /* ------- CONTACTO ------ */
 .section-contacto {
@@ -197,7 +199,7 @@ padding10 {
   cursor: pointer !important; }
 
 /* ------------ Media Queries ------------ */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 990px) {
   /* --- INDEX ---  */
   .section-index-1 div img {
     height: 70vh !important; }
@@ -238,26 +240,24 @@ padding10 {
     max-height: 75vh;
     padding: 15px; }
   .img-bio-2 {
-    max-width: 56vh;
-    max-height: 75vh;
+    max-width: 65vw;
+    max-height: 76vh;
     padding: 20px; }
   /* ----- PRODUCTOS ------ */
-  .section-productos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    padding: 10px; }
-  .imgs-productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px; }
-  .hover-img-productos:hover {
-    transform: scale(1.3);
-    transition-property: all;
-    transition-duration: 2s;
-    transition-timing-function: ease; }
+  .section-productos-1 {
+    grid-template-columns: repeat(4, 1fr); }
+    .section-productos-1 .gallery_item:nth-child(3) {
+      grid-column-start: span 3; }
+    .section-productos-1 .gallery_item:nth-child(5) {
+      grid-column-start: span 1; }
+    .section-productos-1 .gallery_item:nth-child(3) {
+      grid-column-start: span 2; }
+  .section-productos-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 100px;
+    padding: 10px;
+    grid-gap: 5px; }
   /* ------ NOVEDADES ------ */
   .section-novedades {
     display: flex;
@@ -295,8 +295,6 @@ padding10 {
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
   /* --- INDEX ---  */
-  .section-index-1 div img {
-    height: 50vh !important; }
   .parrafo-index {
     text-align: center;
     font-size: 35px;
@@ -316,32 +314,35 @@ padding10 {
     color: black; }
   .imgs-bio {
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
     align-items: center !important;
     padding-bottom: 40px; }
-  .imgs-bio-1 {
-    max-width: 43vw;
-    max-height: 63vh; }
-  .imgs-bio-2 {
-    max-width: 43vw;
-    max-height: 63vh; }
-  /* ----- PRODUCTOS ------ */
-  .section-productos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    padding: 10px; }
-  .imgs-productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px; }
-  .hover-img-productos:hover {
-    transform: scale(1.3);
-    transition-property: all;
-    transition-duration: 2s;
-    transition-timing-function: ease; }
+  .img-bio-1 {
+    width: 50vw;
+    height: 80vh;
+    padding: 15px;
+    object-fit: contain; }
+  .img-bio-2 {
+    padding: 15px;
+    object-fit: contain;
+    width: 50vw;
+    height: auto; }
+  /* ------ PRODUCTOS ------- */
+  .section-index-2 {
+    padding: 40px;
+    font-size: 30px; }
+  .parrafo-index {
+    font-size: 500px; }
+  .section-productos-1 {
+    grid-template-columns: repeat(3, 1fr); }
+    .section-productos-1 .gallery__item:nth-child(1) {
+      grid-column-start: span 2; }
+    .section-productos-1 .gallery__item:nth-child(4) {
+      grid-row-start: span 1; }
+    .section-productos-1 .gallery__item:nth-child(6) {
+      grid-row-start: span 1; }
+    .section-productos-1 .gallery__item:nth-child(7) {
+      grid-row-start: span 1; }
   /* ------- NOVEDADES ------- */
   .section-novedades {
     display: flex;
@@ -372,17 +373,40 @@ padding10 {
     padding: 12px !important;
     font-size: 20px; } }
 
-@media (min-width: 992px) and (max-width: 1800px) {
-  /* ----PRODUCTOS----- */
-  .section-productos {
-    padding: 20px; }
+@media (min-width: 992px) and (max-width: 6000px) {
+  .header {
+    height: 131px; }
+  .logo {
+    height: 124px; }
+  .img-index {
+    height: 70vh !important; }
+  .section-index-3 {
+    padding: 10px; }
+    .section-index-3 p {
+      font-size: 35px;
+      padding: 0px !important; }
+  .section-index-2 {
+    padding: 60px;
+    font-size: 35px; }
+  .section-index-1 {
+    height: 70vh; }
+  /* ------ PRODUCTOS ------- */
+  .section-productos-1 {
+    grid-template-columns: repeat(4, 1fr); }
+    .section-productos-1 .gallery__item:nth-child(1) {
+      grid-column-start: span 2; }
+    .section-productos-1 .gallery__item:nth-child(4) {
+      grid-row-start: span 2;
+      grid-column-start: span 2; }
+    .section-productos-1 .gallery__item:nth-child(6) {
+      grid-row-start: span 1; }
+    .section-productos-1 .gallery__item:nth-child(7) {
+      grid-row-start: span 1; }
   /* ----FOOTER----- */
   .footer {
-    display: flex;
-    background-color: white;
     padding: 20px;
     justify-content: center;
-    height: 210px; }
+    height: 180px; }
     .footer .footer-div {
       display: flex;
       flex-direction: column;
@@ -396,7 +420,7 @@ padding10 {
       font-size: 20px; }
   /* -----Biografía----- */
   .parrafo-bio {
-    font-size: 25px; }
+    font-size: 35px; }
   .imgs-bio {
     display: flex;
     flex-flow: row;
