--- a/scss/productos.scss
+++ b/scss/productos.scss
@@ -1,22 +1,38 @@
             /* ------ PRODUCTOS ------- */
 
-.section-productos {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding-left: 50px;         
-    padding: 30px;   
 
-    .imgs-productos {
-        display: flex;
-        flex-wrap: wrap; 
-        justify-content: space-around; 
-        gap: 20px;
-        .hover-img-productos:hover {
-            transform: scale(1.3);
-            transition-property: all;
-            transition-duration: 2s;
-            transition-timing-function: ease;
-            }
-        }
+    .encabezados-secundarios {
+        font-size: 50px !important;
     }
+
+.section-productos-1 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 400px;         
+    padding: 20px;
+    grid-gap: 10px;   
+
+    .gallery__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    // }    
+    // .gallery__item:nth-child(2) {
+    //     grid-column-start: span 4;
+    // }    
+    // .gallery__item:nth-child(2) {
+    //     grid-column-start: span 6;
+    // }
+    
+}
+
+
+// .section-productos-2 {
+//     display: grid;
+//     grid-template-columns: repeat(2, 1fr);
+//     grid-auto-rows: 100px;
+//     padding: 10px;
+//     grid-gap: 5px;
+// }
