--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -1,8 +1,15 @@
                         /* ------- CONTACTO ------ */
+body {
+    background-color: #f1ae80;
+}
 
 .section-contacto {
-    display:grid;
-    background-color: #eb6364;
+    background-color: #f19288;
+}
+
+.section-contacto-mapa {
+    padding:50px;
+    background-color: #f1ae80;
 }
 
 .form {
