--- a/CSS/main.css
+++ b/CSS/main.css
@@ -34,7 +34,32 @@ padding9 {
 padding10 {
   padding: 0px; }
 
-/* Características Generales (títulos,párrafos,span) */
+/* Características Generales (títulos,párrafos,span, body, nav, header) */
+/* ------ Body id ------ */
+#body {
+  background-color: #eebc5c;
+  margin: 0; }
+
+/* ------ HEADERS ------ */
+.header {
+  background: linear-gradient(135deg, rgba(241, 174, 128, 0.997637) 47%, #e2687e 92%); }
+
+/* ------ NAV  ------*/
+.logo {
+  width: 100px;
+  height: 100px; }
+
+.nav-item {
+  font-family: "KingsmanDemo.ttf";
+  font-size: 20px;
+  border-radius: 10px;
+  margin: 2px;
+  padding: 4px;
+  text-align: center;
+  background-color: #f95f5f99;
+  cursor: pointer; }
+
+/* ----Estilos de texto-----*/
 .encabezados-primarios {
   text-align: center;
   font-family: "KingsmanDemo.ttf";
@@ -53,7 +78,7 @@ padding10 {
   text-align: center;
   font-family: "KingsmanDemo.ttf";
   font-size: 4rem;
-  color: white; }
+  color: black; }
 
 .span-textos {
   font-family: "KingsmanDemo.ttf";
@@ -67,37 +92,14 @@ padding10 {
   padding: 25px;
   text-align: center;
   font-size: 25px; }
-  .section-index-2 div {
-    display: flex;
-    justify-content: end;
-    align-items: flex-end; }
-  .section-index-2 img {
-    height: 150px;
-    width: 150px;
-    animation-name: jirafita;
-    animation-duration: 0.8s;
-    animation-timing-function: ease-in-out;
-    position: absolute; }
-
-@keyframes jirafita {
-  0% {
-    transform: translateX(200px);
-    opacity: 0; }
-  100% {
-    transform: translateX(0px);
-    opacity: 1; } }
 
 .section-index-3 p {
-  background-color: #eebc5c;
   text-align: center;
   font-size: 18px;
   padding: 20px;
   font-family: ui-serif; }
 
 /* ------ PRODUCTOS ------- */
-.encabezados-secundarios {
-  font-size: 50px !important; }
-
 .section-productos-1 {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -109,39 +111,52 @@ padding10 {
     height: 100%;
     object-fit: cover; }
 
+.section-productos-2 {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 400px;
+  padding: 20px;
+  grid-gap: 10px; }
+
+.gallery__img-2 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
+
 /* ------ Biografía ------- */
 .parrafo-bio {
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
+  font-family: ui-serif;
   color: black;
   padding: 15px; }
 
 .imgs-bio {
   display: flex;
-  flex-flow: row; }
-
-.section-2-bio {
-  background-color: #fdb87e; }
-
-.section-1-bio {
-  background-color: #fdb87e; }
+  flex-flow: column; }
 
 .img-bio-1 {
-  width: 60vw;
-  height: 80vh;
   padding: 15px;
-  object-fit: contain; }
+  object-fit: contain;
+  width: 100%;
+  height: 50%; }
 
 .img-bio-2 {
   padding: 15px;
   object-fit: contain;
-  width: 60vw;
-  height: 80vh; }
+  width: 100%;
+  height: 50%; }
 
 /* ------- CONTACTO ------ */
+body {
+  background-color: #f1ae80; }
+
 .section-contacto {
-  display: grid;
-  background-color: #eb6364; }
+  background-color: #f19288; }
+
+.section-contacto-mapa {
+  padding: 50px;
+  background-color: #f1ae80; }
 
 .form {
   display: flex;
@@ -174,78 +189,58 @@ padding10 {
     padding: 10px;
     font-size: 15px; }
 
-/* ------ Body id ------ */
-#body {
-  background-color: #eebc5c;
-  margin: 0; }
-
-/* ------ HEADERS ------ */
-.header {
-  background: linear-gradient(135deg, rgba(241, 174, 128, 0.997637) 47%, #e2687e 92%) !important; }
-
-/* ------ NAV  ------*/
-.logo {
-  width: 100px;
-  height: 100px; }
-
-.nav-item {
-  font-family: "KingsmanDemo.ttf";
-  font-size: 20px;
-  border-radius: 10px;
-  margin: 2px;
-  padding: 4px;
-  text-align: center;
-  background-color: #f95f5f99;
-  cursor: pointer !important; }
-
 /* ------------ Media Queries ------------ */
-@media screen and (min-width: 768px) and (max-width: 990px) {
+@media screen and (min-width: 576px) and (max-width: 992px) {
   /* --- INDEX ---  */
-  .section-index-1 div img {
-    height: 70vh !important; }
-  .section-index-2 {
-    padding: 27px; }
-    .section-index-2 img {
-      height: 170px;
-      width: 170px; }
-  @keyframes jirafita {
-    0% {
-      transform: translateX(200px);
-      opacity: 0; }
-    100% {
-      transform: translateX(0px);
-      opacity: 1; } }
-  .parrafo-index {
-    text-align: center;
-    font-size: 40px;
-    height: 250px; }
+  .section-index-2 p {
+    font-size: 30px; }
   .section-index-3 {
-    background-color: #eebc5c;
     padding: 20px; }
     .section-index-3 p {
-      text-align: center;
-      font-size: 30px; }
+      font-size: 25px; }
   /* ----SOBRE MÍ ---- */
   .parrafo-bio {
-    text-align: center;
-    font-size: 35px;
-    color: black; }
+    font-size: 20px; }
   .imgs-bio {
     display: flex;
-    flex-flow: row;
-    justify-content: space-around;
-    padding-bottom: 40px; }
+    flex-flow: row; }
+  /* ------ PRODUCTOS ------- */
+  .section-productos-1 {
+    grid-template-columns: repeat(3, 1fr); }
+    .section-productos-1 .gallery__item:nth-child(1) {
+      grid-column-start: span 2; }
+    .section-productos-1 .gallery__item:nth-child(4) {
+      grid-row-start: span 1; }
+    .section-productos-1 .gallery__item:nth-child(6) {
+      grid-row-start: span 1; }
+    .section-productos-1 gallery__item:nth-child(7) {
+      grid-row-start: span 1; }
+  .section-productos-2 {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 400px; } }
+
+@media screen and (min-width: 768px) and (max-width: 990px) {
+  /* --- INDEX ---  */
+  .parrafo-index {
+    font-size: 40px;
+    height: 250px; }
+  .section-index-3 p {
+    font-size: 30px; }
+  /* ----SOBRE MÍ ---- */
+  .parrafo-bio {
+    font-size: 30px; }
+  .imgs-bio {
+    display: flex;
+    flex-direction: row; }
   .img-bio-1 {
-    max-width: 56vh;
-    max-height: 75vh;
-    padding: 15px; }
+    width: 50%;
+    height: 50%; }
   .img-bio-2 {
-    max-width: 65vw;
-    max-height: 76vh;
-    padding: 20px; }
+    width: 50%;
+    height: 50%; }
   /* ----- PRODUCTOS ------ */
   .section-productos-1 {
-    grid-template-columns: repeat(4, 1fr); }
+    grid-template-columns: repeat(3, 1fr); }
     .section-productos-1 .gallery_item:nth-child(3) {
       grid-column-start: span 3; }
     .section-productos-1 .gallery_item:nth-child(5) {
@@ -255,141 +250,18 @@ padding10 {
   .section-productos-2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 100px;
-    padding: 10px;
-    grid-gap: 5px; }
-  /* ------ NOVEDADES ------ */
-  .section-novedades {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-    background-color: #eebc5c; }
-  /* -------- CONTACTO  ------- */
-  .section-contacto {
-    display: grid;
-    background-color: #eb6364; }
-  .section-contacto-mapa {
-    padding: 20px; }
-  .section-contacto-radio {
-    background-color: #f19288; }
-  .tabla-contacto {
-    display: grid; }
-  /* ------  FOOTER ------ */
-  .footer {
-    display: flex;
-    background-color: white;
-    padding: 10px;
-    justify-content: center;
-    height: 155px; }
-    .footer .footer-div {
-      display: flex;
-      flex-direction: row;
-      align-items: center; }
-    .footer .footer-iconos {
-      padding: 20px; }
-    .footer .footer-iconos a img {
-      width: 80px;
-      height: 80px; } }
-
-@media screen and (min-width: 576px) and (max-width: 992px) {
-  /* --- INDEX ---  */
-  .parrafo-index {
-    text-align: center;
-    font-size: 35px;
-    height: 250px; }
-  .section-index-2 p {
-    font-size: 30px; }
-  .section-index-3 {
-    background-color: #eebc5c;
-    padding: 20px; }
-    .section-index-3 p {
-      text-align: center;
-      font-size: 20px; }
-  /* ----SOBRE MÍ ---- */
-  .parrafo-bio {
-    text-align: center;
-    font-size: 25px;
-    color: black; }
-  .imgs-bio {
-    display: flex;
-    flex-flow: row;
-    align-items: center !important;
-    padding-bottom: 40px; }
-  .img-bio-1 {
-    width: 50vw;
-    height: 80vh;
-    padding: 15px;
-    object-fit: contain; }
-  .img-bio-2 {
-    padding: 15px;
-    object-fit: contain;
-    width: 50vw;
-    height: auto; }
-  /* ------ PRODUCTOS ------- */
-  .section-index-2 {
-    padding: 40px;
-    font-size: 30px; }
-  .parrafo-index {
-    font-size: 500px; }
-  .section-productos-1 {
-    grid-template-columns: repeat(3, 1fr); }
-    .section-productos-1 .gallery__item:nth-child(1) {
-      grid-column-start: span 2; }
-    .section-productos-1 .gallery__item:nth-child(4) {
-      grid-row-start: span 1; }
-    .section-productos-1 .gallery__item:nth-child(6) {
-      grid-row-start: span 1; }
-    .section-productos-1 .gallery__item:nth-child(7) {
-      grid-row-start: span 1; }
-  /* ------- NOVEDADES ------- */
-  .section-novedades {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-    background-color: #eebc5c; }
-  /* -------- CONTACTO  ------- */
-  .section-contacto {
-    display: grid;
-    background-color: #eb6364; }
-  .section-contacto-mapa {
-    padding: 20px; }
-  .section-contacto-radio {
-    background-color: #f19288; }
-  .tabla-contacto {
-    display: grid; }
-  /* ----FOOTER - GENERAL ---- */
-  .footer-div {
-    display: flex;
-    flex-direction: row; }
-  .footer-iconos a img {
-    width: 60px !important;
-    height: 60px !important; }
-  .p-footer {
-    text-align: center;
-    padding: 12px !important;
-    font-size: 20px; } }
+    grid-auto-rows: 400px; } }
 
 @media (min-width: 992px) and (max-width: 6000px) {
-  .header {
-    height: 131px; }
-  .logo {
-    height: 124px; }
   .img-index {
-    height: 70vh !important; }
+    height: 80vh !important; }
   .section-index-3 {
-    padding: 10px; }
+    padding: 100px; }
     .section-index-3 p {
-      font-size: 35px;
-      padding: 0px !important; }
+      font-size: 35px; }
   .section-index-2 {
     padding: 60px;
-    font-size: 35px; }
-  .section-index-1 {
-    height: 70vh; }
+    font-size: 34px; }
   /* ------ PRODUCTOS ------- */
   .section-productos-1 {
     grid-template-columns: repeat(4, 1fr); }
@@ -402,34 +274,28 @@ padding10 {
       grid-row-start: span 1; }
     .section-productos-1 .gallery__item:nth-child(7) {
       grid-row-start: span 1; }
+  .section-productos-2 {
+    grid-template-columns: repeat(3, 1fr); }
+  /* -----Biografía----- */
+  .imgs-bio {
+    display: flex;
+    flex-direction: row; }
+  .img-bio-1 {
+    width: 50%;
+    height: 50%; }
+  .img-bio-2 {
+    width: 50%;
+    height: 50%; }
+  .parrafo-bio {
+    font-size: 30px;
+    padding: 35px;
+    font-weight: 400; }
   /* ----FOOTER----- */
   .footer {
     padding: 20px;
-    justify-content: center;
     height: 180px; }
-    .footer .footer-div {
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
     .footer .footer-iconos a img {
       width: 90px;
       height: 90px; }
     .footer .p-footer {
-      text-align: center;
-      padding: 5px;
-      font-size: 20px; }
-  /* -----Biografía----- */
-  .parrafo-bio {
-    font-size: 35px; }
-  .imgs-bio {
-    display: flex;
-    flex-flow: row;
-    gap: 20px; }
-  .img-bio-1 {
-    height: 63vh;
-    width: 46vw;
-    padding: 15px; }
-  .img-bio-2 {
-    height: 63vh;
-    width: 46vw;
-    padding: 15px; } }
+      font-size: 20px; } }
