--- a/scss/productos.scss
+++ b/scss/productos.scss
@@ -1,10 +1,6 @@
             /* ------ PRODUCTOS ------- */
 
 
-    .encabezados-secundarios {
-        font-size: 50px !important;
-    }
-
 .section-productos-1 {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -17,22 +13,19 @@
         height: 100%;
         object-fit: cover;
     }
-
-    // }    
-    // .gallery__item:nth-child(2) {
-    //     grid-column-start: span 4;
-    // }    
-    // .gallery__item:nth-child(2) {
-    //     grid-column-start: span 6;
-    // }
-    
 }
 
+.section-productos-2 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 400px;
+    padding: 20px;
+    grid-gap: 10px;
+}
 
-// .section-productos-2 {
-//     display: grid;
-//     grid-template-columns: repeat(2, 1fr);
-//     grid-auto-rows: 100px;
-//     padding: 10px;
-//     grid-gap: 5px;
-// }
+.gallery__img-2 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
