--- a/scss/sobre-mi.scss
+++ b/scss/sobre-mi.scss
@@ -2,34 +2,29 @@
 
 .parrafo-bio {
     text-align: $alignments;
-    font-size: 18px;
+    font-size: 16px;
+    font-family: ui-serif;
     color: black;
     padding: $spacing+5;
 }
 
+
 .imgs-bio {
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
 
-}
-.section-2-bio {
-    background-color: #fdb87e;
-}
-
-.section-1-bio {
-    background-color: #fdb87e;
 }
 
 .img-bio-1 {
-    width: 60vw;
-    height: 80vh;
     padding: 15px;
     object-fit: contain;
+    width: 100%;
+    height: 50%;
 }
 
 .img-bio-2 {
     padding: 15px;
     object-fit: contain;
-    width: 60vw;
-    height: 80vh;
+    width: 100%;
+    height: 50%;
 }
